--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,14 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceRoot}/app/"
+    },
+    {
+      "name": "Attach to url with files served from ./web",
+      "type": "chrome",
+      "request": "attach",
+      "port": 9222,
+      "url": "http://localhost:8000/",
+      "webRoot": "${workspaceRoot}/web"
     }
   ]
 }
